<resources>

    <string name="app_name">爱玩</string>
    <string name="app_sub_name">走吧</string>
    <string name="menu_settings">Settings</string>
    <string name="threemonth">最近三个月</string>
    <string name="deadline">2012.12.21</string>
    <string name="settings">设置</string>
    <string name="i_need">我需要</string>
    <string name="i_not_need">我不要</string>
    <string name="i_do_three_month">我要做____三月</string>
    <string name="i_do_one_month">我要做____一月</string>
    <string name="i_do_one_week">我要做____一周</string>
    <string name="i_do_one_day">我要做____一天</string>
    <string name="delay_time_default_days">+0</string>
    <string name="delay_time">延时</string>
    <string name="reason1">原因一</string>
    <string name="reason2">原因二</string>
    <string name="reason3">原因三</string>
    <string name="reason4">原因四</string>
    <string name="reason5">原因五</string>
    <string name="threethinking">三思而后行</string>
    <string name="thinking1">思考一</string>
    <string name="thinking2">思考二</string>
    <string name="thinking3">思考三</string>
    <string name="thinking4">思考四</string>
    <string name="taskdetails">任务详情</string>
    
    <!-- other  -->
    <string name="stop_msg">&lt;b>Stop&lt;/b>.</string>
    
    <!-- Common & International-->
    <string name="user_shared_label">Play</string>
    <string name="play_des">玩，是一个人的天性，每个年龄每个人都爱玩，无论外出行走，新鲜的出游，闲情逸致的逛逛......引导你选择最适合自己的方式玩的丰富多彩。只因为好玩！ </string>
	<string name="permission_access">access the app</string>
	<string name="permission_access_des">access this, other apps could use some datas</string>
    
</resources>