<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/grayn3"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/your_goal_head"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="#ff333333" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:background="@drawable/background_base1"
            android:gravity="center_vertical"
            android:padding="10dip"
            android:text="@string/delay_time"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dip"
        android:background="@drawable/background_content1" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:shrinkColumns="0"
            android:stretchColumns="0" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/yellown3"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/delay_time_reason_tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:hint="@string/reason1"
                    android:lines="2"
                    android:paddingBottom="10dip"
                    android:paddingLeft="20dip"
                    android:paddingRight="20dip"
                    android:paddingTop="10dip"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/grayn2"
                    android:textSize="16sp" />

                <View
                    android:layout_width="0.5dip"
                    android:layout_height="fill_parent"
                    android:background="@android:color/white" />

                <TextView
                    android:id="@+id/delay_time_reason_num_tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_content_delaytime"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:hint="@string/delay_time_default_days"
                    android:lines="2"
                    android:paddingBottom="10dip"
                    android:paddingLeft="30dip"
                    android:paddingRight="30dip"
                    android:paddingTop="10dip"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/grayn2"
                    android:textSize="16sp" />
            </TableRow>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dip"
                android:background="@android:color/white" />

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/greenn2"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/delay_time_reason_tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:hint="@string/reason1"
                    android:lines="2"
                    android:paddingBottom="10dip"
                    android:paddingLeft="20dip"
                    android:paddingRight="20dip"
                    android:paddingTop="10dip"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/grayn2"
                    android:textSize="16sp" />

                <View
                    android:layout_width="0.5dip"
                    android:layout_height="fill_parent"
                    android:background="@android:color/white" />

                <TextView
                    android:id="@+id/delay_time_reason_num_tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_content_delaytime"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:hint="@string/delay_time_default_days"
                    android:lines="2"
                    android:paddingBottom="10dip"
                    android:paddingLeft="30dip"
                    android:paddingRight="30dip"
                    android:paddingTop="10dip"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/grayn2"
                    android:textSize="16sp" />
            </TableRow>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dip"
                android:background="@android:color/white" />

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/greenn3"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/delay_time_reason_tv3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:hint="@string/reason3"
                    android:lines="2"
                    android:paddingBottom="10dip"
                    android:paddingLeft="20dip"
                    android:paddingRight="20dip"
                    android:paddingTop="10dip"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/grayn2"
                    android:textSize="16sp" />

                <View
                    android:layout_width="0.5dip"
                    android:layout_height="fill_parent"
                    android:background="@android:color/white" />

                <TextView
                    android:id="@+id/delay_time_reason_num_tv3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_content_delaytime"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:hint="@string/delay_time_default_days"
                    android:lines="2"
                    android:paddingBottom="10dip"
                    android:paddingLeft="30dip"
                    android:paddingRight="30dip"
                    android:paddingTop="10dip"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/grayn2"
                    android:textSize="16sp" />
            </TableRow>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dip"
                android:background="@android:color/white" />

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/bluen3"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/delay_time_reason_tv4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:hint="@string/reason4"
                    android:lines="2"
                    android:paddingBottom="10dip"
                    android:paddingLeft="20dip"
                    android:paddingRight="20dip"
                    android:paddingTop="10dip"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/grayn2"
                    android:textSize="16sp" />

                <View
                    android:layout_width="0.5dip"
                    android:layout_height="fill_parent"
                    android:background="@android:color/white" />

                <TextView
                    android:id="@+id/delay_time_reason_num_tv4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_content_delaytime"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:hint="@string/delay_time_default_days"
                    android:lines="2"
                    android:paddingBottom="10dip"
                    android:paddingLeft="30dip"
                    android:paddingRight="30dip"
                    android:paddingTop="10dip"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/grayn2"
                    android:textSize="16sp" />
            </TableRow>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dip"
                android:background="@android:color/white" />

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/bluen4"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/delay_time_reason_tv5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:hint="@string/reason5"
                    android:lines="2"
                    android:paddingBottom="10dip"
                    android:paddingLeft="20dip"
                    android:paddingRight="20dip"
                    android:paddingTop="10dip"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/grayn2"
                    android:textSize="16sp" />

                <View
                    android:layout_width="0.5dip"
                    android:layout_height="fill_parent"
                    android:background="@android:color/white" />

                <TextView
                    android:id="@+id/delay_time_reason_num_tv5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_content_delaytime"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:hint="@string/delay_time_default_days"
                    android:lines="2"
                    android:paddingBottom="10dip"
                    android:paddingLeft="30dip"
                    android:paddingRight="30dip"
                    android:paddingTop="10dip"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/grayn2"
                    android:textSize="16sp" />
            </TableRow>
        </TableLayout>
    </ScrollView>

</LinearLayout>